made classroom post api endpoint more consistent with other post endpoints, updated blueprint api docs
